# conflab-keypoint-detection

./: .gitignore  README.md  data_create.py  main.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/debug/: default.yaml
data_loading/: conflab_dataset.py  utils.py
scripts/: script_train.sh
utils/: utils_det.py
